--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "backend": "nodemon server.js",
+    "frontend": "npm run front --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "keywords": [],
   "author": "Gary Llil",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "materialize-css": "^1.0.0-rc.2",
+    "nodemailer": "^6.4.6",
+    "nodemailer-react": "^0.1.0",
+    "react-axios": "^2.0.3",
+    "react-materialize": "^3.9.2",
+    "react-sticky-footer": "0.1.0-rc3"
   }
 }
