--- a/package.json
+++ b/package.json
@@ -6,26 +6,23 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "client": "npm start --prefix client",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
-    "backend": "nodemon server.js",
-    "frontend": "npm run front --prefix client",
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "keywords": [],
   "author": "Gary Llil",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.2",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
