--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "About Me",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
+    "start": "node server.js",
     "client": "npm start --prefix client",
     "build": "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build",
