--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "About Me",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm start --prefix client",
     "build": "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "Gary Llil",
