--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "concurrently": "^4.1.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "materialize-css": "^1.0.0-rc.2",
