--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "garyPortfolio",
-  "version": "1.0.0",
-  "description": "About Me",
-  "main": "server.js",
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "npm start --prefix client",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "keywords": [],
-  "author": "Gary Llil",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  },
+  "name": "client",
+  "version": "0.1.0",
+  "proxy": "http://localhost:3001",
+  "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "concurrently": "^4.1.2",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "if-env": "^1.0.4",
+    "firebase": "^7.19.1",
+    "http-proxy-middleware": "^1.0.4",
     "materialize-css": "^1.0.0-rc.2",
-    "nodemailer": "^6.4.6",
-    "nodemailer-react": "^0.1.0",
-    "react-axios": "^2.0.3",
-    "react-materialize": "^3.9.2",
+    "nodemailer": "^6.4.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-materialize": "^3.9.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "react-sticky-footer": "0.1.0-rc3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
