Updated content, fixed background color for side-nav, and centered top navigation content

--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.19.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "nodemailer": "^6.4.11",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-materialize": "^3.9.3",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
+    "firebase": "^8.4.3",
+    "materialize-css": "^1.0.0",
+    "nodemailer": "^6.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-materialize": "^3.9.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
